# DepthCamera

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/depthcamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md
app/src/main/cpp/: .clang-format  .clang-tidy  CMakeLists.txt  DepthEstimation.cpp  DepthEstimation.hpp  ImageUtils.cpp  ImageUtils.hpp  Log.hpp  NativeJavaScopes.hpp  NativeLib.cpp  OnnxRuntime.cpp  PerformanceScope.hpp  TfLiteRuntime.cpp  TfLiteRuntime.hpp  TfLiteUtils.hpp
app/src/main/cpp/src/: DepthEstimation.cpp  DepthEstimation.hpp  NativeLib.cpp
app/src/main/cpp/src/onnx/: OnnxRuntime.cpp  OnnxRuntime.hpp
app/src/main/cpp/src/tflite/: TfLiteRuntime.cpp  TfLiteRuntime.hpp  TfLiteUtils.hpp
app/src/main/cpp/src/utils/: Error.hpp  ImageUtils.cpp  ImageUtils.hpp  Log.hpp  NativeJavaScopes.hpp  Profiling.cpp  Profiling.hpp
app/src/main/java/com/example/depthcamera/: BitmapExtensions.kt  CameraFrameAnalyzer.kt  DepthCameraApp.kt  DepthColorMap.kt  DepthModel.kt  MainActivity.kt  MiDaSDepthModel.kt  NativeLib.kt  PerformanceInfo.kt  PerformanceScope.kt  PermissionManager.kt
app/src/main/java/com/example/depthcamera/camera/: CameraFrameAnalyzer.kt  CameraManager.kt  CameraSelector.kt
app/src/main/java/com/example/depthcamera/depth/: DepthAnythingModel.kt  DepthColorMap.kt  DepthModel.kt  MiDaSDepthModel.kt  OnnxModel.kt  TFLiteUtils.kt  TfLiteDepthModel.kt
app/src/main/java/com/example/depthcamera/performance/: PerformanceFrame.kt  PerformanceInfo.kt  PerformanceScope.kt
app/src/main/java/com/example/depthcamera/utils/: BitmapExtensions.kt  ImageUtils.kt  PermissionManager.kt  Time.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/depthcamera/: ExampleUnitTest.kt
gradle/: libs.versions.toml
